// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`equivalent functions hook accepting 'args json' returning 'setof mutation_message' creates messages on meta 1`] = `
Array [
  Object {
    "code": "INFO1",
    "level": "info",
    "message": "Pre user insert mutation; name: Bobby Tables",
    "path": Array [
      "input",
      "name",
    ],
  },
]
`;

exports[`equivalent functions hook accepting 'args json' returning 'setof mutation_message' creates messages on meta 2`] = `
Object {
  "data": Object {
    "createUser": Object {
      "messages": Array [
        Object {
          "level": "info",
          "message": "Pre user insert mutation; name: Bobby Tables",
          "path": Array [
            "input",
            "name",
          ],
        },
      ],
      "user": Object {
        "id": "[NUMBER]",
        "name": "Bobby Tables",
        "nodeId": "[NodeId]",
      },
    },
  },
}
`;
